# llvm-project

./: .gitignore
ccxx/: .clang-format  .gitignore  CMakeLists.txt  Language-Design.md  README.md  ccxx-mime_type.xml  ccxx.cc
ccxx/doc/: concept.ccxx
ccxx/include/ast/: ASTNode.td  CMakeLists.txt  DeclNodes.td  Operators.td  StmtNodes.td
ccxx/src/: CMakeLists.txt
ccxx/src/ast/: AST.hh  ASTContext.cc  ASTContext.hh  ASTVisitor.hh  CMakeLists.txt  DeclBase.cc  DeclBase.hh  DeclContext.cc  DeclContext.hh  DeclFwd.hh  DeclNodes.cc  DeclNodes.hh  Expr.cc  Expr.hh  Stmt.cc  Stmt.hh
ccxx/src/codegen/: CMakeLists.txt  IrGenerator.cc  IrGenerator.hh
ccxx/src/lex/: CMakeLists.txt  Lexer.cc  Lexer.hh  TokenKinds.cc  TokenKinds.def  TokenKinds.hh  TokenKindsClearMacros.def
ccxx/src/parse/: CMakeLists.txt  OperatorInfo.cc  OperatorInfo.def  OperatorInfo.hh  Parser.cc  Parser.hh
ccxx/src/semantics/: CMakeLists.txt  SemanticAnalyzer.cc  SemanticAnalyzer.hh
ccxx/src/type/: BuiltinType.hh  BuiltinTypes.def  CMakeLists.txt  Type.cc  Type.hh
ccxx/stdlib/: CMakeLists.txt  format.ccxx  string.ccxx  stringstream.ccxx  strview.ccxx
ccxx/syntax/: ccxx.xml
ccxx/test/: CMakeLists.txt  lex_test.cc  source.ccxx
ccxx/tools/TableGen/: ASTNodeRecord.hh  CCXXTableGenBackends.cc  CMakeLists.txt
clang/lib/CodeGen/: CGBuiltin.cpp  CGDeclCXX.cpp
clang/test/CodeGen/: builtins-ppc-xlcompat-LoadReseve-StoreCond-64bit-only.c  builtins-ppc-xlcompat-LoadReseve-StoreCond.c
llvm/: CMakeLists.txt
llvm/lib/Support/Windows/: Path.inc
llvm/tools/: CMakeLists.txt
